@@ -178,11 +178,13 @@ IF (WTF_USE_TILED_BACKING_STORE)
   SET(ENABLE_3D_RENDERING 1)
   ADD_DEFINITIONS(-DENABLE_3D_RENDERING=1)
 
+  FIND_PACKAGE(OpenGL REQUIRED)
+ENDIF()
+
+IF (ENABLE_WEBGL)
   SET (ENABLE_WEBGL 1)
   ADD_DEFINITIONS(-DWTF_USE_GRAPHICS_SURFACE=1)
   ADD_DEFINITIONS(-DHAVE_GLX)
-
-  FIND_PACKAGE(OpenGL REQUIRED)
 ENDIF()
 
 IF (ENABLE_SPELLCHECK)
